@@ -65,8 +65,7 @@ cvlview_LDADD = \
 
 cvlview_CPPFLAGS = \
 	-I$(top_builddir)/gnulib -I$(top_srcdir)/gnulib	\
-	-I$(top_srcdir)/mhlib				\
-	-I$(top_srcdir)/glvm
+	-I$(top_srcdir)/mhlib
 
 cvlview_CXXFLAGS = $(QT4_CXXFLAGS)
 
