@@ -1,3 +1,8 @@
+2008-04-22  Martin Lambers <marlam@marlam.de>
+
+	* src/view_area.cpp, src/Makefile.am: Fix computation of the used
+	viewport area for "Save current view" operations.
+
 2008-04-21  Martin Lambers <marlam@marlam.de>
 
 	* src/zoom_selector.h, src/zoom_selector.cpp,
